--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-bootstrap": "2.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "7.25.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0"
@@ -32,9 +33,9 @@
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.3",
     "eslint-plugin-react": "7.24.0",
+    "sass": "1.47.0",
     "stylelint-config-recommended-scss": "5.0.2",
-    "stylelint-scss": "4.1.0",
-    "sass": "1.47.0"
+    "stylelint-scss": "4.1.0"
   },
   "proxy": "http://localhost:3001/",
   "browserslist": {
