--- a/backend/package.json
+++ b/backend/package.json
@@ -46,7 +46,7 @@
     "pg-connection-string": "2.5.0",
     "pino": "7.6.5",
     "pino-pretty": "7.5.1",
-    "swagger-ui-express": "^4.3.0",
+    "swagger-ui-express": "4.3.0",
     "ts-node": "10.4.0",
     "typeorm": "0.2.41"
   }
