--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/swagger-ui-express": "^4.1.3",
+    "@types/swagger-ui-express": "4.1.3",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
