--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint:js": "npx eslint src --ext ts,tsx",
     "lint:css": "npx stylelint \"src/**/*.scss\"",
     "lint": "npm run lint:css && npm run lint:js",
-    "start": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
