--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,11 @@
     "npm": ">=8 <9"
   },
   "scripts": {
-    "start": "node ./server.js",
+    "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev ./src/server.ts",
     "start:fast": "ts-node-dev --respawn --type-check --notify=false --clear ./src/server.ts",
     "lint": "npx eslint \"./src/**/*.ts\" --fix",
-    "typeorm": "ts-node node_modules/typeorm/cli.js",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "add-migration": "ts-node node_modules/typeorm/cli.js migration:generate -n",
     "migrate": "ts-node node_modules/typeorm/cli.js migration:run",
     "migration-revert": "ts-node node_modules/typeorm/cli.js migration:revert",
@@ -35,7 +35,10 @@
     "eslint-plugin-import": "2.22.1",
     "growup-shared": "file:../shared/build",
     "ts-node-dev": "1.1.8",
-    "tscpaths": "0.0.9"
+    "tscpaths": "0.0.9",
+    "ts-node": "3.3.0",
+    "@types/node": "^8.0.29",
+    "typescript": "3.3.3333"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -48,6 +51,8 @@
     "pino-pretty": "7.5.1",
     "swagger-ui-express": "4.3.0",
     "ts-node": "10.4.0",
-    "typeorm": "0.2.41"
+    "typeorm": "0.2.41",
+    "reflect-metadata": "^0.1.10",
+    "mysql": "^2.14.1"
   }
 }
