--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,36 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "~/*": [
-        "./src/*"
-      ]
-    },
-    "declaration": true,
-    "target": "es6",
+    "lib": ["es5", "es6"],
+    "target": "es5",
     "module": "commonjs",
-    "pretty": true,
-    "sourceMap": true,
-    "outDir": "build",
-    "preserveSymlinks": true,
-    "importHelpers": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": false,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
+    "outDir": "./build",
     "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "lib": ["es2020"],
-    "typeRoots": ["src/common/typings", "node_modules/@types"]
-  },
-  "include": ["./src/**/*"]
+    "experimentalDecorators": true,
+    "sourceMap": true
+  }
 }
