feat: add --fix flag eslint

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "npm": ">=8 <9"
   },
   "scripts": {
-    "lint:js": "npx eslint src --ext ts,tsx",
+    "lint:js": "npx eslint src --ext ts,tsx --fix",
     "lint:css": "npx stylelint \"src/**/*.scss\"",
     "lint": "npm run lint:css && npm run lint:js",
     "start": "BROWSER=none react-scripts start",
