feat: add --fix to stylelint

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "lint:js": "npx eslint src --ext ts,tsx --fix",
-    "lint:css": "npx stylelint \"src/**/*.scss\"",
+    "lint:css": "npx stylelint \"src/**/*.scss\" --fix",
     "lint": "npm run lint:css && npm run lint:js",
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
