fix: moved 'react-bootstrap-icons' dependency to frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "growup-shared": "file:../shared/build",
     "react": "17.0.2",
     "react-bootstrap": "2.1.1",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "17.0.2",
     "react-hook-form": "7.25.3",
     "react-redux": "7.2.6",
