--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "start": "node -r tsconfig-paths/register ./server.js",
     "start:dev": "nodemon --exec ts-node --files -r tsconfig-paths/register ./src/server.ts",
     "lint": "npx eslint \"./src/**/*.ts\" --fix",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm": "ts-node node_modules/typeorm/cli.js",
     "add-migration": "ts-node node_modules/typeorm/cli.js migration:generate -n",
     "migrate": "ts-node node_modules/typeorm/cli.js migration:run",
     "migration-revert": "ts-node node_modules/typeorm/cli.js migration:revert",
@@ -49,8 +49,6 @@
     "pino-pretty": "7.5.1",
     "swagger-ui-express": "4.3.0",
     "ts-node": "10.4.0",
-    "typeorm": "0.2.41",
-    "reflect-metadata": "^0.1.10",
-    "mysql": "^2.14.1"
+    "typeorm": "0.2.41"
   }
 }
