--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,17 +1,34 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6"],
-    "target": "es6",
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     },
     "declaration": true,
+    "target": "es6",
     "module": "commonjs",
+    "pretty": true,
+    "sourceMap": true,
+    "outDir": "build",
+    "preserveSymlinks": true,
+    "importHelpers": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": false,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "outDir": "./build",
-    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "sourceMap": true
-  }
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "lib": ["es2020"],
+    "typeRoots": ["src/common/typings", "node_modules/@types"]
+  },
+  "include": ["./src/**/*"]
 }
