--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nodemon --exec ts-node --files -r tsconfig-paths/register ./src/server.ts",
     "lint": "npx eslint \"./src/**/*.ts\" --fix",
     "typeorm": "ts-node node_modules/typeorm/cli.js",
-    "add-migration": "ts-node node_modules/typeorm/cli.js migration:generate -n",
+    "add-migration": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:generate -n",
     "migrate": "ts-node node_modules/typeorm/cli.js migration:run",
     "migration-revert": "ts-node node_modules/typeorm/cli.js migration:revert",
     "generate-seed": "ts-node node_modules/typeorm/cli.js migration:create -d ./src/data/seeders -n",
