--- a/backend/package.json
+++ b/backend/package.json
@@ -39,9 +39,9 @@
     "tscpaths": "0.0.9"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^8.5.8",
-    "bcrypt": "^5.0.1",
+    "@types/bcrypt": "5.0.0",
+    "@types/jsonwebtoken": "8.5.8",
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "14.3.2",
     "express": "4.17.2",
