--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,7 @@
     "cors": "2.8.5",
     "dotenv": "14.3.2",
     "express": "4.17.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "8.5.1",
     "pg": "8.7.1",
     "pg-connection-string": "2.5.0",
     "pino": "7.6.5",
