--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "5.1.3",
     "clsx": "1.1.1",
     "growup-shared": "file:../shared/build",
+    "query-string": "7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "^1.7.2",
