--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/swagger-ui-express": "4.1.3",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
