--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "commonjs",
     "pretty": true,
     "sourceMap": true,
-    "outDir": "build",
+    "outDir": "build/src",
     "preserveSymlinks": true,
     "importHelpers": true,
     "strict": true,
