--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,9 +20,9 @@ rules:
   no-console:
     - error
     - allow:
-      - warn
-      - error
-      - info
+        - warn
+        - error
+        - info
   '@typescript-eslint/explicit-function-return-type':
     - error
     - allowTypedFunctionExpressions: true
@@ -43,7 +43,8 @@ rules:
     - vars: all
       args: after-used
       argsIgnorePattern: ^_
+      varsIgnorePattern: ^_
       caughtErrors: all
   '@typescript-eslint/no-empty-interface':
-  - error
-  - allowSingleExtends: true
+    - error
+    - allowSingleExtends: true
