--- a/backend/package.json
+++ b/backend/package.json
@@ -40,16 +40,16 @@
     "tscpaths": "0.0.9"
   },
   "dependencies": {
-    "@types/aws-sdk": "^2.7.0",
+    "@types/aws-sdk": "2.7.0",
     "@types/bcrypt": "5.0.0",
-    "@types/express-fileupload": "^1.2.2",
+    "@types/express-fileupload": "1.2.2",
     "@types/jsonwebtoken": "8.5.8",
-    "aws-sdk": "^2.1073.0",
+    "aws-sdk": "2.1073.0",
     "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "14.3.2",
     "express": "4.17.2",
-    "express-fileupload": "^1.3.1",
+    "express-fileupload": "1.3.1",
     "jsonwebtoken": "8.5.1",
     "pg": "8.7.1",
     "pg-connection-string": "2.5.0",
