--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint": "8.8.0",
     "husky": "7.0.1",
     "lint-staged": "11.1.0",
+    "prettier": "2.5.1",
+    "pretty-quick": "3.1.3",
     "stylelint": "14.3.0",
     "stylelint-config-recommended": "6.0.0",
     "typescript": "4.5.5"
