--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
     "react-avatar": "4.0.0",
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "1.7.2",
+    "react-crop-image": "1.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "7.25.3",
+    "react-image-crop": "9.1.1",
     "react-notifications": "1.7.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
