feat: almost done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
   "prettier.quoteProps": "preserve",
   "prettier.trailingComma": "all",
   "prettier.bracketSpacing": true,
-  "prettier.arrowParens": "always"
+  "prettier.arrowParens": "always",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
