--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@types/node": "16.11.19",
     "@types/react": "17.0.38",
-    "@types/react-bootstrap-typeahead": "^5.1.8",
+    "@types/react-bootstrap-typeahead": "5.1.8",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.3",
