--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "1.7.2",
     "react-crop-image": "1.0.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "17.0.2",
     "react-hook-form": "7.25.3",
     "react-image-crop": "9.1.1",
