--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "react-avatar": "4.0.0",
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "1.7.2",
+    "react-bootstrap-typeahead": "5.2.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
     "react-hook-form": "7.25.3",
     "react-notifications": "1.7.2",
