--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "1.7.2",
     "react-bootstrap-typeahead": "5.2.2",
+    "react-cropper": "2.1.8",
     "react-datepicker": "4.7.0",
     "react-dom": "17.0.2",
     "react-hook-form": "7.25.3",
