--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "2.1.1",
     "react-bootstrap-icons": "1.7.2",
     "react-bootstrap-typeahead": "5.2.2",
+    "react-circular-progressbar": "2.0.4",
     "react-cropper": "2.1.8",
     "react-datepicker": "4.7.0",
     "react-dom": "17.0.2",
@@ -37,6 +38,7 @@
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "reaflow": "4.2.16",
     "uuid": "8.3.2"
   },
   "devDependencies": {
