--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,12 @@
     "react-cropper": "2.1.8",
     "react-datepicker": "4.7.0",
     "react-dom": "17.0.2",
+    "react-flow-renderer": "10.0.2",
     "react-hook-form": "7.25.3",
     "react-notifications": "1.7.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
-    "reaflow": "4.2.16",
     "uuid": "8.3.2"
   },
   "devDependencies": {
