--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,6 +23,12 @@ TYPEORM_ENTITIES= src/data/entities/**/*.ts
 #
 # AWS S3
 #
-AWS_ACCESS_KEY=*AWS_ACCESS_KEY*
-AWS_SECRET_KEY=*AWS_SECRET_KEY*
+AWS_ACCESS_KEY=AWS_ACCESS_KEY
+AWS_SECRET_KEY=AWS_SECRET_KEY
 AWS_BUCKET_NAME=bsa-growup
+
+#
+# Email
+#
+EMAIL_NAME=EMAIL_NAME
+EMAIL_PASSWORD=EMAIL_PASSWORD
