--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,12 @@
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/handlebars": "4.1.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/multer": "1.4.7",
     "@types/nodemailer": "6.4.4",
     "@types/swagger-ui-express": "4.1.3",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "8.3.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -50,6 +51,7 @@
     "cors": "2.8.5",
     "dotenv": "14.3.2",
     "express": "4.17.2",
+    "handlebars": "4.7.7",
     "jsonwebtoken": "8.5.1",
     "multer": "1.4.4",
     "nodemailer": "6.7.2",
@@ -60,6 +62,6 @@
     "swagger-ui-express": "4.3.0",
     "ts-node": "10.4.0",
     "typeorm": "0.2.41",
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   }
 }
