--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "generate-seed": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:create -d ./src/data/seeders -n",
     "seed": "ts-node -r tsconfig-paths/register ./src/data/seeders",
     "build:ts": "tsc && tscpaths -p tsconfig.json --src ./src --out ./build/src",
-    "build:copy": "cp -r public package.json package-lock.json build",
+    "build:copy": "cp -r public package.json package-lock.json build && copyfiles -u 1 src/**/*.html build/src",
     "build": "npm run build:ts && npm run build:copy",
     "prod": "node --max-old-space-size=1024 -r tsconfig-paths/register ./src/server.ts"
   },
@@ -36,6 +36,7 @@
     "@types/nodemailer": "6.4.4",
     "@types/swagger-ui-express": "4.1.3",
     "@types/uuid": "8.3.4",
+    "copyfiles": "2.4.1",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
