--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "5.1.3",
     "chart.js": "3.7.1",
     "clsx": "1.1.1",
+    "dayjs": "1.10.8",
     "growup-shared": "file:../shared/build",
     "joi": "17.5.0",
     "query-string": "7.0.1",
