--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
